--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.3"
+    "react-native": "0.55.3",
+    "react-native-countdown-circle": "^3.0.0",
+    "redux-promise": "^0.6.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
